--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@reactour/tour": "^3.8.0",
     "@reduxjs/toolkit": "^2.10.1",
     "@tailwindcss/vite": "^4.1.16",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "driver.js": "^1.3.6",
     "framer-motion": "^12.23.24",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.552.0",
@@ -34,6 +36,7 @@
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.66.0",
     "react-icons": "^5.5.0",
+    "react-is": "^19.2.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.5",
     "recharts": "^3.3.0",
